src/test/deca/codegen/invalid/resultats/cast2-ima.res
Erreur : Cast non valide effectue.
